[project]
name = "pypepper"
version = "0.4.7"
authors = [
    { name = "jovijovi", email = "mageyul@hotmail.com" },
]
description = "PyPepper is a microservice toolkit written in Python."
readme = "README.md"
requires-python = ">=3.10, <=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "arrow==1.4.0",
    "cachetools==7.1.4",
    "cryptography==49.0.0",
    "fastapi==0.139.0",
    "uvicorn==0.51.0",
    "loguru==0.7.3",
    "mongoengine==0.29.3",
    "python-box==7.4.1",
    "pymysql==1.2.0",
    "psycopg[binary]==3.3.4",
    "pyyaml==6.0.3",
    "sqlalchemy==2.0.51",
    "pip==26.1.2",
]

[project.urls]
Homepage = "https://github.com/jovijovi/pypepper"
Repository = "https://github.com/jovijovi/pypepper"
Issues = "https://github.com/jovijovi/pypepper/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build==1.5.1",
    "coverage==7.15.0",
    "httpx>=0.28.1",
    "packaging==26.2",
    "pip==26.1.2",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "twine==6.2.0",
]
