[project]
name = "pypepper"
version = "0.4.7"
authors = [
    { name = "jovijovi", email = "mageyul@hotmail.com" },
]
description = "PyPepper is a microservice toolkit written in Python."
readme = "README.md"
requires-python = ">=3.10, <=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "arrow==1.4.0",
    "cachetools==7.1.4",
    "cryptography==49.0.0",
    "fastapi==0.139.0",
    "uvicorn==0.51.0",
    "loguru==0.7.3",
    "mongoengine==0.29.3",
    "python-box==7.4.1",
    "pymysql==1.2.0",
    "psycopg[binary]==3.3.4",
    "pyyaml==6.0.3",
    "sqlalchemy==2.0.51",
    "pip==26.1.2",
]

[project.urls]
Homepage = "https://github.com/jovijovi/pypepper"
Repository = "https://github.com/jovijovi/pypepper"
Issues = "https://github.com/jovijovi/pypepper/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build==1.5.1",
    "coverage==7.15.0",
    "httpx>=0.28.1",
    "mkdocs-material>=9.6",
    "mypy>=1.16",
    "packaging==26.2",
    "pip==26.1.2",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "ruff>=0.12",
    "twine==6.2.0",
    "types-PyYAML>=6.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["pypepper"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"pypepper/**/__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
files = ["pypepper"]
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = false
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "box",
    "box.*",
    "mongoengine",
    "mongoengine.*",
    "cachetools",
    "cachetools.*",
    "loguru",
    "loguru.*",
    "arrow",
    "arrow.*",
]
ignore_missing_imports = true
